# kiditrade-psql-sink

./: Cargo.toml  LICENSE  README.md
migrations/2019-09-14-094341_create_bars/: up.sql
src/: main.rs  schema.rs
